version/0.19/_sources/api/solver/_autosummary/settings/turbulence_2.rst.txt
:orphan:

.. _turbulence_2:

turbulence
==========

.. autoclass:: ansys.fluent.core.solver.settings_241.turbulence_2.turbulence
    :show-inheritance:

.. rubric:: Attributes

==================================================================================   ================================================

Attribute                                                                                                                     Summary

==================================================================================   ================================================
:ref:`turbulent_specification <turbulent_specification>`                                              Turbulent Specification Method.

:ref:`modified_turbulent_viscosity <modified_turbulent_viscosity_1>`                                    Modified Turbulent Viscosity.

:ref:`laminar_kinetic_energy <laminar_kinetic_energy_1>`                                                      Laminar Kinetic Energy.

:ref:`intermittency <intermittency_1>`                                                                                 Intermittency.

:ref:`turbulent_kinetic_energy <turbulent_kinetic_energy_1>`                                                Turbulent Kinetic Energy.

:ref:`turbulent_dissipation_rate <turbulent_dissipation_rate_1>`                                          Turbulent Dissipation Rate.

:ref:`specific_dissipation_rate <specific_dissipation_rate_1>`                                             Specific Dissipation Rate.

:ref:`velocity_variance_scale <velocity_variance_scale_1>`                                                   Velocity Variance Scale.

:ref:`turbulent_intensity <turbulent_intensity_1>`                                                               Turbulent Intensity.

:ref:`turbulent_length_scale <turbulent_length_scale_1>`                                                      Turbulent Length Scale.

:ref:`hydraulic_diameter <hydraulic_diameter_1>`                                                                  Hydraulic Diameter.

:ref:`turbulent_viscosity_ratio_real <turbulent_viscosity_ratio_real_1>`                                   Turbulent Viscosity Ratio.

:ref:`turbulent_viscosity_ratio <turbulent_viscosity_ratio_1>`                                             Turbulent Viscosity Ratio.

:ref:`reynolds_stress_specification <reynolds_stress_specification>`                            Reynolds-Stress Specification Method.

:ref:`uu_reynolds_stresses <uu_reynolds_stresses_1>`                                                            UU Reynolds Stresses.

:ref:`vv_reynolds_stresses <vv_reynolds_stresses_1>`                                                            VV Reynolds Stresses.

:ref:`ww_reynolds_stresses <ww_reynolds_stresses_1>`                                                            WW Reynolds Stresses.

:ref:`uv_reynolds_stresses <uv_reynolds_stresses_1>`                                                            UV Reynolds Stresses.

:ref:`vw_reynolds_stresses <vw_reynolds_stresses_1>`                                                            VW Reynolds Stresses.

:ref:`uw_reynolds_stresses <uw_reynolds_stresses_1>`                                                            UW Reynolds Stresses.

:ref:`subgrid_kinetic_energy_specification <subgrid_kinetic_energy_specification>`       Subgrid Kinetic Energy Specification Method.

:ref:`subgrid_kinetic_energy <subgrid_kinetic_energy>`                                                        Subgrid Kinetic Energy.

:ref:`subgrid_turbulent_intensity <subgrid_turbulent_intensity>`                                         Subgrid Turbulent Intensity.

==================================================================================   ================================================

.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`       'child_object_type' of mass_flow_inlet.

:ref:`phase_child <phase_child_9>`                                   'child_object_type' of phase.

====================================================   ===========================================

