version/0.24/_sources/api/solver/_autosummary/settings/turbulence_2.rst.txt
:orphan:

.. _turbulence_2:

turbulence
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.turbulence_2.turbulence
    :show-inheritance:

.. rubric:: Attributes

==================================================================================   =======================================================

Attribute                                                                                                                            Summary

==================================================================================   =======================================================
:ref:`turbulence_specification <turbulence_specification>`                                           Select Turbulence Specification Method.

:ref:`modified_turbulent_viscosity <modified_turbulent_viscosity>`                                     Specify Modified Turbulent Viscosity.

:ref:`laminar_kinetic_energy <laminar_kinetic_energy>`                                                       Specify Laminar Kinetic Energy.

:ref:`intermittency <intermittency>`                                                                                  Specify Intermittency.

:ref:`turbulent_kinetic_energy <turbulent_kinetic_energy>`                                                 Specify Turbulent Kinetic Energy.

:ref:`turbulent_dissipation_rate <turbulent_dissipation_rate>`                                           Specify Turbulent Dissipation Rate.

:ref:`specific_dissipation_rate <specific_dissipation_rate>`                                              Specify Specific Dissipation Rate.

:ref:`velocity_variance_scale <velocity_variance_scale>`                                                    Specify Velocity Variance Scale.

:ref:`turbulent_intensity <turbulent_intensity>`                                                                Specify Turbulent Intensity.

:ref:`turbulent_length_scale <turbulent_length_scale>`                                                       Specify Turbulent Length Scale.

:ref:`hydraulic_diameter <hydraulic_diameter>`                                                                   Specify Hydraulic Diameter.

:ref:`turbulent_viscosity_ratio <turbulent_viscosity_ratio>`                                              Specify Turbulent Viscosity Ratio.

:ref:`turbulent_viscosity_ratio_profile <turbulent_viscosity_ratio_profile>`                              Specify Turbulent Viscosity Ratio.

:ref:`reynolds_stress_specification <reynolds_stress_specification>`                           Specify Reynolds-Stress Specification Method.

:ref:`uu_reynolds_stresses <uu_reynolds_stresses>`                                                             Specify UU Reynolds Stresses.

:ref:`vv_reynolds_stresses <vv_reynolds_stresses>`                                                             Specify VV Reynolds Stresses.

:ref:`ww_reynolds_stresses <ww_reynolds_stresses>`                                                             Specify WW Reynolds Stresses.

:ref:`uv_reynolds_stresses <uv_reynolds_stresses>`                                                             Specify UV Reynolds Stresses.

:ref:`vw_reynolds_stresses <vw_reynolds_stresses>`                                                             Specify VW Reynolds Stresses.

:ref:`uw_reynolds_stresses <uw_reynolds_stresses>`                                                             Specify UW Reynolds Stresses.

:ref:`subgrid_kinetic_energy_specification <subgrid_kinetic_energy_specification>`       Select Subgrid Kinetic Energy Specification Method.

:ref:`subgrid_kinetic_energy <subgrid_kinetic_energy>`                                                       Specify Subgrid Kinetic Energy.

:ref:`subgrid_turbulent_intensity <subgrid_turbulent_intensity>`                                        Specify Subgrid Turbulent Intensity.

==================================================================================   =======================================================

.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`                'child_object_type' of mass_flow_inlet.

:ref:`phase_child <phase_child_11>`                                           'child_object_type' of phase.

:ref:`pressure_far_field_child <pressure_far_field_child>`       'child_object_type' of pressure_far_field.

:ref:`phase_child <phase_child_20>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_39>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_47>`                                           'child_object_type' of phase.

==========================================================   ==============================================

